--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -7,7 +7,7 @@
       background: var(--color-blue-light2);
       border-color: var(--color-border-light);
       border: 1px solid rgba(0,0,0,.125);
-      border-radius: 8px;
+      border-radius: 0;
 
       &:first-of-type {
         border-top-left-radius: 8px;
