--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -355,6 +355,10 @@ a {
   background-color: #f2f7fc;
 }
 
+.bg-grey {
+  background-color: #EDEDED !important;
+}
+
 .text-left {
   text-align: left;
 }
@@ -476,6 +480,11 @@ li {
   width: 100% !important;
 }
 
+.container-md {
+  max-width: 970px;
+  margin: 0 auto;
+}
+
 @media screen and (min-width: 576px) {
   .w-sm-100 {
     width: 100%;
@@ -496,6 +505,10 @@ li {
 
 .h-auto {
   height: auto !important;
+}
+
+.h-fix-100 {
+  height: 100px !important;
 }
 
 .mb-3 {
@@ -826,7 +839,7 @@ label {
     position: relative;
   }
 }
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1200px) {
   .contain-wrapper-sm {
     max-width: 690px;
     margin: 0 auto;
@@ -2632,6 +2645,34 @@ label.checkbox-inline.squar-boxes img.offline {
   display: block;
 }
 
+label.checkbox-inline.squar-boxes.blue-shadow {
+  background: none;
+  border-radius: 0;
+  box-shadow: none;
+  padding: 0;
+}
+label.checkbox-inline.squar-boxes.blue-shadow .checkbox-label {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.0784313725);
+  background: #fff;
+  border-radius: 12px;
+  padding: 10px;
+}
+label.checkbox-inline.squar-boxes.blue-shadow .checkbox-control:checked ~ .checkbox-label {
+  box-shadow: 0px 20px 30px 0px #ddeefb;
+}
+label.checkbox-inline.squar-boxes.blue-shadow .checkbox-control:disabled ~ .checkbox-label {
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: no-drop;
+}
+label.checkbox-inline.squar-boxes.blue-shadow.blue-select .checkbox-control:checked ~ .checkbox-label {
+  background-color: #E6F1F9;
+  border-color: #B3D3EC !important;
+  color: #016BBF;
+}
+
 .accordion.custom > .accordion-item.accordion-white.bordered {
   border: 1px solid var(--color-border-light);
   box-shadow: none;
@@ -3018,6 +3059,10 @@ h1 {
   cursor: pointer;
 }
 
+.data-toggle.text-blue {
+  border-color: var(--color-primary);
+}
+
 .popover-body {
   padding: 6px 10px;
   color: #616161;
@@ -3030,6 +3075,64 @@ h1 {
 
 .priceConfirm .modal-dialog.modal-lg {
   max-width: 710px;
+}
+
+.upload_take_img {
+  padding: 24px;
+  width: 432px;
+  background-color: #F2F7FC;
+  border-radius: 10px;
+  margin: 0 auto;
+  display: flex;
+}
+
+.uploadBox {
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  width: 180px;
+  height: 160px;
+  cursor: pointer;
+}
+.uploadBox input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
+}
+.uploadBox span {
+  padding: 24px 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  background-color: #E6F1F9;
+}
+.uploadBox span img {
+  width: 80px;
+}
+.uploadBox .doc-upload {
+  background-color: #fff;
+  border-radius: 6px;
+  border: 1px solid #99C4E5;
+  position: relative;
+}
+.uploadBox .doc-upload > img {
+  padding: 3px;
+}
+.uploadBox .delete-doc {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  font-size: 0;
 }
 
 main .wrapper .admin-section-container {
@@ -8816,6 +8919,9 @@ main .wrapper .admin-section-container .content {
 .business-insurance-flow .radio-label.fs-14 {
   font-size: 14px !important;
 }
+.business-insurance-flow .accordion.custom .accordion-item .accordion-header .accordion-button {
+  border-bottom: 1px solid #e6e6e6;
+}
 .business-insurance-flow .tooltip-card {
   position: relative;
 }
@@ -8869,14 +8975,14 @@ main .wrapper .admin-section-container .content {
 .business-insurance-flow .claim-section.auto-ratio label.checkbox-inline.squar-boxes {
   flex-grow: 1;
 }
+.business-insurance-flow .wide-box.claim-section {
+  margin: 0 -8px;
+}
 .business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes {
   width: 220px;
   height: 156px;
-  margin-right: 16px;
-  margin-top: 0;
-}
-.business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes:last-child {
-  margin-right: 0;
+  margin: 0 8px;
+  flex-grow: 1;
 }
 .business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes .checkbox-label {
   padding: 16px;
@@ -8918,6 +9024,18 @@ main .wrapper .admin-section-container .content {
   width: 244px;
   height: 156px;
 }
+.business-insurance-flow .accordion.custom .accordion-item {
+  overflow: hidden;
+  border: 1px solid var(--color-border-light);
+}
+.business-insurance-flow .accordion.custom .accordion-item:last-of-type {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.business-insurance-flow .accordion.custom .accordion-item:first-of-type {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
 .business-insurance-flow .card-box {
   border: 1px solid #e6e6e6;
   background: white;
@@ -8931,6 +9049,13 @@ main .wrapper .admin-section-container .content {
   font-size: 18px;
   font-weight: 400;
   margin: 0;
+}
+.business-insurance-flow .card-box .box-header.header-bold h2 {
+  font-size: 16px;
+  font-weight: 500;
+}
+.business-insurance-flow .card-box .box-header.header-bold h2 img {
+  margin-right: 6px;
 }
 .business-insurance-flow .card-box .box-body {
   padding: 16px;
@@ -9198,6 +9323,11 @@ main .wrapper .admin-section-container .content {
     width: 6px;
   }
 }
+.input-group .f-dropdown > span {
+  border-left: 0;
+  border-right: 0;
+}
+
 @media only screen and (min-width: 1400px) {
   .f-dropdown > span {
     height: 50px;
@@ -9283,6 +9413,10 @@ main .wrapper .admin-section-container .content {
 .btn.btn-outline-primary {
   color: var(--color-primary);
   border-color: var(--color-primary);
+}
+.btn.btn-outline-primary:hover {
+  background-color: var(--color-primary) !important;
+  color: var(--color-white);
 }
 .btn.btn-outline {
   border: 1px solid #CCCCCC;
@@ -9420,6 +9554,12 @@ input:-webkit-autofill:active {
   box-shadow: none;
 }
 
+textarea.form-control {
+  height: 100px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
 .input-group {
   display: flex;
   align-items: center;
@@ -9527,11 +9667,27 @@ input[type=date]::-webkit-calendar-picker-indicator {
   margin-left: 5px;
 }
 
+.radio-pill .radio-label {
+  padding: 6px 12px;
+  border: 1px solid #b3d3ec;
+  border-radius: 4px;
+  color: #016bbf;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  margin-left: 0;
+}
+.radio-pill input.radio-control:checked ~ .radio-label {
+  background: #016bbf;
+  border: 1px solid #016bbf;
+  color: #fff;
+}
+
 .accordion.custom .accordion-item {
   background: var(--color-blue-light2);
   border-color: var(--color-border-light);
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 8px;
+  border-radius: 0;
 }
 .accordion.custom .accordion-item:first-of-type {
   border-top-left-radius: 8px;
