--- a/src/scss/pages/business-insurance/_default-flow.scss
+++ b/src/scss/pages/business-insurance/_default-flow.scss
@@ -1,3 +1,17 @@
+.accordion.custom .accordion-item {
+  overflow: hidden;
+  border: 1px solid var(--color-border-light);
+}
+.accordion.custom .accordion-item:last-of-type {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.accordion.custom .accordion-item:first-of-type {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
 .card-box {
   border: 1px solid #e6e6e6;
   background: white;
@@ -11,22 +25,30 @@
       font-weight: 400;
       margin: 0;
     }
+
+    &.header-bold h2 {
+      font-size: 16px;
+      font-weight: 500;
+      img {
+        margin-right: 6px;
+      }
+    }
   }
   .box-body {
     padding: 16px;
 
-    label.label{
-        font-size: 16px;
-        font-weight: 500;
-        small{
-            font-weight: 400;
-            color: var(--color-title);
-        }
+    label.label {
+      font-size: 16px;
+      font-weight: 500;
+      small {
+        font-weight: 400;
+        color: var(--color-title);
+      }
     }
   }
 }
 
-.white-box.multichoice-box{
-    max-width: 445px;
-    margin: 0 auto;
+.white-box.multichoice-box {
+  max-width: 445px;
+  margin: 0 auto;
 }
