--- a/src/scss/pages/business-insurance/_main-flow.scss
+++ b/src/scss/pages/business-insurance/_main-flow.scss
@@ -109,6 +109,10 @@
   font-size: 14px !important;
 }
 
+.accordion.custom .accordion-item .accordion-header .accordion-button {
+  border-bottom: 1px solid #e6e6e6;
+}
+
 .tooltip-card {
   position: relative;
 
@@ -154,7 +158,6 @@
   }
 }
 
-
 .accordion.custom .accordion-button {
   &.hide-arrow:after {
     opacity: 0;
@@ -164,7 +167,7 @@
   }
 }
 .claim-section {
-  &.auto-ratio{
+  &.auto-ratio {
     max-width: 860px;
     margin-left: auto;
     margin-right: auto;
@@ -173,25 +176,26 @@
     }
   }
   label.checkbox-inline.squar-boxes {
-    
   }
 }
 
+.wide-box.claim-section {
+  margin: 0 -8px;
+  label.checkbox-inline.squar-boxes {
+    width: 220px;
+    height: 156px;
+    margin: 0 8px;
+    flex-grow: 1;
 
-
-.wide-box.claim-section label.checkbox-inline.squar-boxes {
-  width: 220px;
-  height: 156px;
-  margin-right: 16px;
-  margin-top: 0;
-  &:last-child {
-    margin-right: 0;
-  }
-  .checkbox-label {
-    padding: 16px;
-  }
-  &.rectangle-box {
-    width: 280px;
+    // &:last-child {
+    //   margin-right: 0;
+    // }
+    .checkbox-label {
+      padding: 16px;
+    }
+    &.rectangle-box {
+      width: 280px;
+    }
   }
 }
 
