--- a/src/scss/pages/business-insurance/index.css
+++ b/src/scss/pages/business-insurance/index.css
@@ -103,6 +103,9 @@
 .business-insurance-flow .radio-label.fs-14 {
   font-size: 14px !important;
 }
+.business-insurance-flow .accordion.custom .accordion-item .accordion-header .accordion-button {
+  border-bottom: 1px solid #e6e6e6;
+}
 .business-insurance-flow .tooltip-card {
   position: relative;
 }
@@ -156,14 +159,14 @@
 .business-insurance-flow .claim-section.auto-ratio label.checkbox-inline.squar-boxes {
   flex-grow: 1;
 }
+.business-insurance-flow .wide-box.claim-section {
+  margin: 0 -8px;
+}
 .business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes {
   width: 220px;
   height: 156px;
-  margin-right: 16px;
-  margin-top: 0;
-}
-.business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes:last-child {
-  margin-right: 0;
+  margin: 0 8px;
+  flex-grow: 1;
 }
 .business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes .checkbox-label {
   padding: 16px;
@@ -205,6 +208,18 @@
   width: 244px;
   height: 156px;
 }
+.business-insurance-flow .accordion.custom .accordion-item {
+  overflow: hidden;
+  border: 1px solid var(--color-border-light);
+}
+.business-insurance-flow .accordion.custom .accordion-item:last-of-type {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.business-insurance-flow .accordion.custom .accordion-item:first-of-type {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
 .business-insurance-flow .card-box {
   border: 1px solid #e6e6e6;
   background: white;
@@ -218,6 +233,13 @@
   font-size: 18px;
   font-weight: 400;
   margin: 0;
+}
+.business-insurance-flow .card-box .box-header.header-bold h2 {
+  font-size: 16px;
+  font-weight: 500;
+}
+.business-insurance-flow .card-box .box-header.header-bold h2 img {
+  margin-right: 6px;
 }
 .business-insurance-flow .card-box .box-body {
   padding: 16px;
