--- a/src/scss/utils/_color.scss
+++ b/src/scss/utils/_color.scss
@@ -23,6 +23,7 @@ $colors: ("primary": $primary,
     "checkbox": $checkbox,
     "checkbox-bg": $checkbox-bg,
     "light-gray": $light-gray,
+    "light-gray2": $light-gray2,
     "light-gray3": $light-gray3,
     "light-gray4": $light-gray4,
     "has-error": $has-error,
