--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -11,9 +11,9 @@ $title: #616161;
 $paragraph: #4E4E4E;
 $black: #000000;
 $white: #ffffff;
-$smoke:rgba(255, 255, 255, 0.9);
-$divider: rgba(34, 34, 34, 0.2);
-$drop-shadow: rgba(0, 0, 0, 0.149);
+$smoke:#ffffffe6;
+$divider: #22222233;
+$drop-shadow: #00000026;
 $border-light: #E6E6E6;
 $border-light2: #F5F5F5;
 $box-border: #DBDBDB;
@@ -23,6 +23,7 @@ $placeholder: #8F969A;
 $checkbox: #929598;
 $checkbox-bg: #D1362F;
 $light-gray: #8A8A8A;
+$light-gray2: #f2f7fc;
 $light-gray3: #999999;
 $light-gray4: #cccccc;
 $has-error: #BF0101;
