--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -32,4 +32,5 @@
 @forward "./safety-supp.scss";
 @forward "./quincy-supp.scss";
 @forward "./amica-forms.scss";
-@forward "./business-insurance/index.scss"
+@forward "./business-insurance/index.scss";
+@forward "./billing-section/index"
