--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9623,6 +9623,333 @@ main .wrapper .admin-section-container .content.login-pannel {
   margin: 0 auto;
 }
 
+.billing-section .badge.bg-warning {
+  background-color: #FDE8D2 !important;
+  color: #BA6007 !important;
+}
+.billing-section .badge.bg-error {
+  background-color: #F2CCCC !important;
+  color: #BF0101 !important;
+}
+.billing-section .field-icon {
+  position: absolute;
+  top: 50%;
+  bottom: auto;
+  -webkit-transform: translate(0%, -50%);
+  -ms-transform: translate(0%, -50%);
+  transform: translate(0%, -50%);
+  right: 20px;
+}
+.billing-section .blue-card {
+  border: 1px solid #E6E6E6;
+  background: #F1F8FE;
+  padding: 12px;
+  border-radius: 8px;
+}
+.billing-section .blue-card .card-title {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: left;
+}
+.billing-section .blue-card label {
+  margin: 0;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+}
+.billing-section .blue-card.blue-badge {
+  height: 36px;
+  padding: 4px 12px;
+}
+
+.billing-modals .modal-dialog {
+  max-width: 430px;
+}
+.billing-modals .modal-content {
+  border-radius: 8px;
+  border: 0;
+}
+.billing-modals .modal-header {
+  border: 0;
+  font-family: Roboto Serif;
+}
+.billing-modals .modal-body {
+  padding: 8px 16px;
+}
+.billing-modals .modal-footer {
+  border: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.billing-modals .success-modal .modal-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 30px;
+  height: 30px;
+  margin: 43px auto;
+  background: #016bbf;
+  border-radius: 50px;
+  outline: 23px solid #e6f1f9;
+}
+.billing-modals .success-modal .modal-head img {
+  -webkit-filter: brightness(1000);
+          filter: brightness(1000);
+  width: 15px;
+}
+.billing-modals .success-modal .modal-head.no-bg {
+  background: #e6f1f9;
+}
+.billing-modals .success-modal .modal-head.no-bg img {
+  -webkit-filter: brightness(1);
+          filter: brightness(1);
+  width: 30px;
+}
+.billing-modals .success-modal .error-modal-head.no-bg {
+  background: #F9E6E6;
+  outline: 23px solid #F9E6E6;
+}
+.billing-modals .success-modal .modal-title {
+  font-family: Roboto Serif;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: center;
+  margin-bottom: 8px;
+}
+.billing-modals .success-modal p {
+  color: #616161;
+}
+.billing-modals .success-modal .btn.btn-sm {
+  min-width: initial;
+}
+.billing-modals .success-modal .btn.btn-center {
+  margin: 20px auto 16px;
+}
+
+.billing-section.pay-modal .method-details {
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  background: #fff;
+}
+.billing-section.pay-modal .method-details:hover, .billing-section.pay-modal .method-details:focus, .billing-section.pay-modal .method-details:focus-within {
+  background: #e6f1f9;
+  border: 1px solid #016bbf;
+}
+.billing-section.pay-modal .method-details .method-name {
+  padding: 8px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #2b2b2b;
+}
+.billing-section.pay-modal .method-details .method-name img {
+  width: 24px;
+}
+.billing-section.pay-modal .method-details .method-number {
+  color: #2b2b2b;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: right;
+}
+.billing-section.pay-modal label.pay-switch {
+  width: auto;
+  font-size: 12px;
+  font-weight: 300;
+  margin: 0;
+  color: white;
+  border-left: 1px solid #e6e6e6;
+  padding: 4px 8px;
+  margin-left: 8px;
+}
+.billing-section.pay-modal label.pay-switch input.switch-input {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+.billing-section.pay-modal label.pay-switch input.switch-input:checked + .switch-handle {
+  background: -webkit-gradient(linear, left top, right top, color-stop(100%, #01bf42), to(#e6e6e6));
+  background: -o-linear-gradient(left, #01bf42 100%, #e6e6e6 100%);
+  background: linear-gradient(90deg, #01bf42 100%, #e6e6e6 100%);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  color: white;
+  direction: rtl;
+}
+.billing-section.pay-modal label.pay-switch input.switch-input:checked + .switch-handle .switch-bulb {
+  color: #01bf42;
+}
+.billing-section.pay-modal label.pay-switch .switch-handle {
+  border: 1px solid #e6e6e6;
+  border-radius: 50px;
+  padding: 5px;
+  background: #e6e6e6;
+  color: #616161;
+  display: block;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  background: -webkit-gradient(linear, left top, right top, from(#01bf42), color-stop(0%, #e6e6e6));
+  background: -o-linear-gradient(left, #01bf42 0%, #e6e6e6 0%);
+  background: linear-gradient(90deg, #01bf42 0%, #e6e6e6 0%);
+}
+.billing-section.pay-modal label.pay-switch .switch-bulb {
+  background: white;
+  color: #bf0101;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  display: inline-block;
+  text-align: center;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(19, 19, 19, 0.1490196078);
+          box-shadow: 0px 2px 5px 0px rgba(19, 19, 19, 0.1490196078);
+}
+.billing-section.pay-modal label.pay-switch .switch-bulb:after {
+  content: "OFF";
+  font-size: 9px;
+  font-weight: 500;
+}
+
+.payment-dropdown .payment-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+.payment-dropdown .payment-card input[type=radio] {
+  width: 0;
+  height: 0;
+  position: absolute;
+  opacity: 0;
+}
+.payment-dropdown .payment-card input[type=radio]:checked + .card-content {
+  background-color: #e6f1f9;
+  border: 1px solid #016bbf;
+}
+.payment-dropdown .payment-card input[type=radio]:checked + .card-content .card-icon img.active {
+  display: block;
+}
+.payment-dropdown .payment-card input[type=radio]:checked + .card-content .card-icon img.offline {
+  display: none;
+}
+.payment-dropdown .payment-card input[type=radio]:checked + .card-content .manual-price {
+  display: block;
+}
+.payment-dropdown .payment-card input[type=radio]:checked + .card-content span.success-modal-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.payment-dropdown .payment-card .card-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #e6e6e6;
+  padding: 4px 6px;
+  border-radius: 4px;
+}
+.payment-dropdown .payment-card .card-content span.success-modal-head {
+  display: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 13px;
+  height: 13px;
+  margin: 0 0 0 auto;
+  background: #016bbf;
+  border-radius: 50px;
+}
+.payment-dropdown .payment-card .card-content span.success-modal-head img {
+  -webkit-filter: brightness(1000);
+          filter: brightness(1000);
+  width: 7px;
+}
+.payment-dropdown .payment-card .card-content .card-icon img {
+  width: 32px;
+  height: 32px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin-right: 6px;
+}
+.payment-dropdown .payment-card .card-content .card-icon img.active {
+  display: none;
+}
+.payment-dropdown .payment-card .card-content .card-icon img.offline {
+  display: block;
+}
+.payment-dropdown .payment-card .card-content .card-title {
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 17px;
+  margin-bottom: 0;
+}
+.payment-dropdown .payment-card .card-content .card-price {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
+}
+.payment-dropdown .payment-card .card-content .manual-price {
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 17px;
+  margin-top: 6px;
+  text-align: left;
+  color: #8a8a8a;
+  display: none;
+}
+.payment-dropdown .payment-card .card-content .manual-price .input-group.form-control {
+  height: 36px;
+  overflow: hidden;
+  font-size: 14px;
+}
+.payment-dropdown .payment-card .card-content .manual-price span.input-group-text {
+  font-size: 14px;
+  color: #8A8A8A;
+}
+.payment-dropdown .payment-card .card-content .manual-price.error .input-group.form-control {
+  border-color: #BF0101;
+}
+.payment-dropdown .payment-card .card-content .manual-price.error span.input-group-text {
+  color: #BF0101;
+}
+
+.radio-btn input.radio-control:checked ~ .radio-label:after {
+  content: "";
+  margin-left: 10px;
+}
+
 .navbar-toggler {
   background-image: url(/images/menu.svg);
   background-repeat: no-repeat;
@@ -10025,6 +10352,68 @@ main .wrapper .admin-section-container .content.login-pannel {
 .btn.btn-outline-primary:hover {
   background-color: var(--color-primary) !important;
   color: var(--color-white);
+}
+.btn.btn-danger {
+  border: 0;
+  color: var(--color-white);
+  position: relative;
+  overflow: hidden;
+}
+.btn.btn-danger span {
+  position: relative;
+  color: var(--color-white);
+  -webkit-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.btn.btn-danger:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: var(--color-has-error);
+  color: var(--color-white);
+  left: 0;
+  bottom: 0;
+  -webkit-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  opacity: 1;
+}
+.btn.btn-danger::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border: 1px solid var(--color-has-error);
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.btn.btn-danger .hide-hover {
+  display: inline;
+}
+.btn.btn-danger .show-hover {
+  display: none;
+}
+.btn.btn-danger:hover {
+  background-color: var(--color-white) !important;
+  color: var(--color-has-error);
+}
+.btn.btn-danger:hover span {
+  color: var(--color-has-error);
+}
+.btn.btn-danger:hover:before {
+  width: 0;
+  color: var(--color-white);
+}
+.btn.btn-danger:hover .hide-hover {
+  display: none;
+}
+.btn.btn-danger:hover .show-hover {
+  display: inline;
 }
 .btn.btn-outline {
   border: 1px solid #CCCCCC;
