--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2569,7 +2569,10 @@ tr:last-child td:last-child {
 }
 .vehicle-damage .car-sides-input.none {
   left: 50%;
-  top: 0;
+  top: -10px;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 .vehicle-damage .car-sides-input.front {
   top: 50%;
