--- a/src/assets/css/pages/client-profile.css
+++ b/src/assets/css/pages/client-profile.css
@@ -1059,7 +1059,10 @@
 }
 .vehicle-damage .car-sides-input.none {
   left: 50%;
-  top: 0;
+  top: -10px;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 .vehicle-damage .car-sides-input.front {
   top: 50%;
